pkg/lang/syntax/testdata/ub/validate/invalid/factory/configurations-meta-selector-mismatch.ub
factory: {
  configurations: {
    formal: greet {}
  }

  actions: {
    say: greeter.say {
      @configurations: { aws: configuration.formal }
    }
  }
}
